feat: create a maven plugin for building .kpars
Signed-off-by: Vytautas Astrauskas <vytautas.astrauskas@sensmetry.com>