@@ -24,7 +24,21 @@ There are currently multiple ways to wrap a Rust library for Java:
    is not available on Java 21, which is used in the Pilot implementation.
 
 We have decided to use the first approach because it should be the easiest to
-integrate for our end-users.
+integrate for our end-users. We may want to migrate to the foreign function and
+memory API once Pilot updates to Java 22 or newer.
+
+Note: From JDK 22, Java throws a warning when loading a native Java module. This
+warning will become an error in JDK 24 and will require the user to explicitly
+allow native modules as described in [JEP
+472](https://openjdk.org/jeps/472#Description). Currently, the warning looks as
+follows:
+
+   ```plain
+   WARNING: A restricted method in java.lang.System has been called
+   WARNING: java.lang.System::load has been called by com.sensmetry.sysand.NativeLoader in an unnamed module (file:.../sysand-0.0.4-SNAPSHOT.jar)
+   WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
+   WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+   ```
 
 ## Building and testing
 
@@ -36,16 +50,19 @@ Requirements:
 - Python 3 (executable named `python3`)
 
 Build and run tests:
+
 ```bash
 ./scripts/run_tests.sh
 ```
 
 Only build:
+
 ```bash
 ./scripts/java-builder.py build
 ```
 
 Only run tests:
+
 ```bash
 ./scripts/java-builder.py test
 ```
